# macropulse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
api/: auth.py  main.py
api/middleware/: rate_limit.py
api/routes/: analysis.py  auth.py  backtest.py  billing.py  commentary.py  dashboard.py  forecast.py  performance.py  regime.py  signals.py  websocket.py
api/schemas/: responses.py
config/: settings.py
data/ingestion/: fred_client.py  market_client.py
data/pipelines/: daily_pipeline.py
data/processing/: feature_engineering.py
database/: connection.py  queries.py  schema.sql
database/migrations/: 001_user_management.sql  002_paddle_billing.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: landing.html
frontend/src/: App.jsx  index.css
frontend/src/components/: DriftPanel.jsx  FactorsChart.jsx  Header.jsx  LiquidityChart.jsx  RegimeCard.jsx  RegimeTimeline.jsx
models/: garch_model.py  hmm_model.py  pca_model.py  regime_classifier.py
nginx/: nginx.conf
notebooks/: demo_regime_strategy.ipynb
scripts/: backfill_history.py  init_db.py  retrain_models.py  run_daily_pipeline.py  setup_vps.sh
services/: alerting.py  backtest.py  drift_monitor.py  fomc_calendar.py  forecaster.py  inference.py  orchestrator.py  paddle.py  performance.py  scheduler.py  signals.py  validation.py
site/: index.html  pricing.html  privacy.html  refund.html  terms.html  vercel.json  welcome.html
(+4 files in other folders)
